# FALCON

./: .gitignore  AGENTS.md  README.md  falcon_proposal.md  pyproject.toml
configs/: default.yaml  tool_manifest.yaml
data/sample_gffs/: MGYG000410739.gff
data/test_samples/Cas9/: seed.fasta
docs/: architecture.md  data_model.md  development_plan.md  llm_agent.md
docs/superpowers/plans/: 2026-04-11-falcon-mvp-skeleton.md  2026-04-11-falcon-phase2-homology-cohorts.md  2026-04-11-falcon-phase3-colocation.md  2026-04-12-falcon-phase4-agent-evidence-tools.md  2026-04-15-candidate-reasoning-backbone.md  2026-04-21-research-runtime-refactor.md
docs/superpowers/specs/: 2026-04-11-falcon-mvp-skeleton-design.md  2026-04-11-falcon-phase2-homology-cohorts-design.md  (+4 more)
prompts/agent/: falsification_loop.yaml
src/falcon/: __init__.py  cli.py  config.py  models.py
tests/: test_agent.py  test_agent_actions.py  test_agent_llm.py  test_agent_prompts.py  test_agent_team.py  test_agent_team_backbone.py  test_agent_team_graph_context.py  test_agent_team_reasoning.py  test_agent_tool_executor.py  test_background.py  test_cli.py  test_cohort.py  test_cohort_investigator.py  test_colocation.py  test_config.py  test_context.py  test_dynamic_tools.py  test_family_naming.py  test_homology.py  test_interproscan_parser.py  test_literature.py  test_manifests.py  test_reasoning_runtime.py  test_reporting_markdown.py  test_research_runtime_loop.py  test_seeds.py  test_semantic_bridge.py  test_sequences.py  test_tool_manifest.py  test_tool_runner.py  test_tool_summary_layer.py  test_tools.py
(+80 files in other folders)
