[project]
name = "falcon"
version = "0.1.0"
description = "Falsification-first agentic system for metagenomic discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0",
  "pyyaml>=6.0",
  "scipy>=1.12",
  "typer>=0.12",
]

[project.scripts]
falcon = "falcon.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/falcon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
